Add slides for zio-lmdb